// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button/> render with default/required props 1`] = `
<div>
  <button
    class="button "
  >
    {{label}}
  </button>
</div>
`;

exports[`<Button/> render with default/required props 2 1`] = `
<DocumentFragment>
  <button
    class="button "
  >
    {{label}}
  </button>
</DocumentFragment>
`;
